#RG-660. Fix header right menu alignment
Former-commit-id: 48864f161c19ea4d2369aaa3c9e6b61d145786e6

--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -172,7 +172,7 @@
   margin-right: $ring-unit*3;
 
   &:last-child {
-    margin-right: 0;
+    margin-right: $ring-unit;
   }
 
   .ring-link:hover,
